# Asteroids

./: CMakeLists.txt  Draw.cpp  Draw.h  Entity.cpp  Input.h  ScreenInfo.h  Vector2.h  draw.cpp  main.cpp
Entities/: Asteroid.cpp  Entity.cpp  Entity.h  Explosion.cpp  OffScreenEntity.cpp  OffScreenEntity.h  Player.cpp  Projectile.cpp  Star.cpp
